<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_name_edit_text"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_input_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_age_edit_text"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_input_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_db_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_init_button" />

        <Button
            android:id="@+id/btn_db_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_input_button" />

        <Button
            android:id="@+id/btn_db_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_select_button" />

        <Button
            android:id="@+id/btn_db_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_update_button" />

        <Button
            android:id="@+id/btn_db_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_delete_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name_result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FF00"
            android:padding="20dp" />

        <TextView
            android:id="@+id/tv_number_result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FF00"
            android:padding="20dp" />
    </LinearLayout>

</LinearLayout>