<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".example02_fragment_data_change.ExampleFragmentDataChangeActivity">

    <TextView
        android:id="@+id/tv_do_access_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="액티비티의 텍스트뷰"
        android:textSize="30dp" />

    <LinearLayout
        android:id="@+id/example_data_change_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" />

    <Button
        android:id="@+id/btn_do_change_first_fragment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_first_fragment_text"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btn_do_change_second_fragment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_second_fragment_text"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btn_do_change_fragment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_fragment"
        android:textSize="30dp" />


</LinearLayout>